# yt-dlp

./: .gitignore  README.md  deployment.md  package-lock.json  package.json
.cursor/rules/: fork-structure.mdc  web-client.mdc  web-server.mdc
devscripts/: generate_ytdlp_cli_catalog.py
scripts/: clear-vite-cache.mjs  run-dev-server.mjs  run-generate-catalog.mjs  web-venv.mjs
web/: README.md
web/client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/client/public/: _redirects  ytdlp-cli-catalog.json
web/client/src/: App.tsx  index.css
web/client/src/api/: client.ts
web/client/src/components/: DownloadOptionsForm.tsx  Layout.tsx  PageHeader.tsx  YouTubeEmbedCard.tsx
web/client/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  scroll-area.tsx  sheet.tsx  textarea.tsx
web/client/src/hooks/: useApiStatus.ts
web/client/src/lib/: downloadOptions.ts  youtube.ts
web/client/src/pages/: AdvancedPage.tsx  AudioPage.tsx  FeaturesFaqPage.tsx  FormatsPage.tsx  HomePage.tsx  JobsPage.tsx  NetworkPage.tsx  SubtitlesPage.tsx  TerminalPage.tsx
web/server/: .env.example  .gitignore  pyproject.toml
web/server/analytics/: __init__.py  aggregate.py  cli.py  store.py
web/server/app/: __init__.py  cli.py  download.py  main.py  terminal.py  ydl_opts.py
