[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ytdlp-web"
version = "0.1.0"
description = "Web UI server for yt-dlp fork (analytics and future API)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ytdlp-aggregate-analytics = "analytics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["analytics"]
