[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ytdlp-web"
version = "0.1.0"
description = "FastAPI server for yt-dlp fork web UI (downloads, terminal API, optional analytics)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
ytdlp-aggregate-analytics = "analytics.cli:main"
ytdlp-web-server = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["analytics", "app"]
